modified auth route, and fixed the z-index of the swal alert

--- a/client/src/components/NotificationCard/NotificationCard.css
+++ b/client/src/components/NotificationCard/NotificationCard.css
@@ -142,3 +142,7 @@
   color: rgb(102, 102, 102);
   font-size: 13px;
 }
+
+.swal2-container {
+  z-index: 1000000;
+}
