--- a/client/src/components/ProductImage/ProductImage.css
+++ b/client/src/components/ProductImage/ProductImage.css
@@ -8,3 +8,7 @@
     height: 100%;
     object-fit: contain;
 }
+
+.swal2-container {
+  z-index: 1000000;
+}
